about me section

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="./css/wave.css"> -->
+    <link rel="stylesheet" href="./css/cursore_follow.css">
+
+    <!--  -->
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/homepage.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
+
+    <link rel="stylesheet" href="./css/skils.css">
 
 
 
@@ -21,15 +26,16 @@
         <div class="logo"><img src="./img/Pink Typography .png" alt=""></div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
-            <i class="fa fa-bars"></i>
+            <!-- <i class="fa fa-bars"></i> -->
+            <img src="./img/menu.png" alt="">
             <!-- <i class="fa-regular fa-bars"></i> -->
         </label>
         <ul>
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Skills</a></li>
             <li><a href="#">Project</a></li>
-            <li><a href="#">git</a></li>
-            <li><a href="#">othre</a></li>
+            <li><a href="#">Content Me</a></li>
 
         </ul>
 
@@ -40,18 +46,20 @@
 
     <div id="homepage">
         <div id="image">
-            <img src="./img/kishor Photo.png" alt="">
+            <img src="./img/Untitled design (1).png" alt="">
         </div>
         <div id="name">
 
             <h1 class="animate__bounceIn">Hi,</h1>
             <h1 class="animate__bounceIn">I'm Kishor Mane</h1>
             <h1 class="animate__bounceIn">Node.JS Backend Developer</h1>
+            <p>A highly motivated Backend Developer with extensive knowledge of Node.js, MongoDB, and Express.js. Experienced in developing, testing, and deploying backend applications. Highly organized and detail-oriented, with the ability to quickly understand complex requirements and work in a fast-paced environment. Dedicated to providing excellent customer service and meeting project deadlines.</p>
+            <button>Resume</button>
         </div>
 
     </div>
     <div id="skils">
-        <h1 class="animate__backInUp">Techinal Skills</h1>
+        <h1 id="techSkillName" class="animate__backInUp">Techinal Skills</h1>
         <div id="Techinal">
 
         </div>
