--- a/wave.html
+++ b/wave.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/cursore_follow.css">
+    <!-- <link rel="stylesheet" href="./css/cursore_follow.css"> -->
 </head>
 <body>
     
 </body>
 </html>
-<script src="./src/cursore_follow.js"></script>
+<!-- <script src="./src/cursore_follow.js"></script> -->
