--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#skils">Skills</a></li>
             <li><a href="#project">Project</a></li>
             <li><a href="#">Content Me</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="https://drive.google.com/u/0/uc?id=1vCoAWwfoIguQHzeeyadGaWNapsln_fDv&export=download">Resume</a></li>
 
 
         </ul>
