--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/project.css">
     <!-- <link rel="stylesheet" href="css/animate.css"> -->
     <link rel="stylesheet" href="./css/background.css">
-    <!-- <link rel="stylesheet" href="./css/borderAnimation.css"> -->
+    <link rel="stylesheet" href="./css/borderAnimation.css">
 
 
 
@@ -41,8 +41,8 @@
         <ul>
             <li><a class="active" href="#homepage">Home</a></li>
             <li><a href="#">About Me</a></li>
-            <li><a href="#skils">Skills</a></li>
-            <li><a href="#project">Project</a></li>
+            <li><a href="#button">Skills</a></li>
+            <li><a href="#projjjjjjjjjjjjjjjj">Project</a></li>
             <li><a href="#">Content Me</a></li>
             <li><a href="https://drive.google.com/u/0/uc?id=1vCoAWwfoIguQHzeeyadGaWNapsln_fDv&export=download">Resume</a></li>
 
@@ -56,7 +56,7 @@
 
     <div id="homepage" class="bg">
         <div id="image">
-            <img data-aos="zoom-in" src="./img/Untitled design (1).png" alt="">
+            <img  data-aos="zoom-in" src="./img/Untitled design (1).png" alt="">
         </div>
         <div id="name">
 
@@ -67,10 +67,11 @@
                 Experienced in developing, testing, and deploying backend applications. Highly organized and
                 detail-oriented, with the ability to quickly understand complex requirements and work in a fast-paced
                 environment. Dedicated to providing excellent customer service and meeting project deadlines.</p>
-            <button class="card">Resume</button>
+            <button id="button"  class="glow-on-hover" >Resume</button>
         </div>
 
     </div>
+    <div id="skilllllllllllll"></div>
     <div id="skils">
         <h1 style="margin-top: 50px;" class="techSkillName">Techinal Skills</h1>
         <div class="techskills" id="Techinal"  style=" width: 50%;margin-top: 10px;">
@@ -119,7 +120,7 @@
         </div>
 
     </div>
-
+<div id="projjjjjjjjjjjjjjjj"></div>
     <div id="project">
         <h1>Projects</h1>
 
@@ -156,7 +157,7 @@
                         
                     </div>
                     <div>
-                        <button>Github</button>
+                        <button >Github</button>
                         <button>Deployed</button>
                     </div>
 
