--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/project.css" />
     <link rel="stylesheet" href="./css/background.css" />
-    <link rel="stylesheet" href="./css/borderAnimation.css" />
+    <link rel="stylesheet" href="./css/borderAnimation.css" /> 
     <link rel="stylesheet" href="./css/contact.css" />
   </head>
   <body>
@@ -52,7 +52,8 @@
           requirements and work in a fast-paced environment. Dedicated to
           providing excellent customer service and meeting project deadlines.
         </p>
-        <button id="button" class="glow-on-hover">Resume</button>
+        <button id="button" id="Resume_btn"
+        class="glow-on-hover">Resume</button>
       </div>
     </div>
     <div id="skilllllllllllll"></div>
@@ -171,7 +172,7 @@
           </div>
         </div>
         <!-- 2nd -->
-        <div data-aos="fade-right" data-aos-delay="400">
+        <div data-aos="fade-left" data-aos-delay="400">
           <div class="project_img">
             <img src="./img/wib101.jpg" alt="" />
           </div>
@@ -259,7 +260,7 @@
     </div>
   </body>
 </html>
-<script src="./src/cursore_follow.js"></script>
+
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
@@ -291,3 +292,4 @@
     min-height: auto;
   }
 </style>
+<script src="./src/resume.js"></script>
