link git and linkedin

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
         <h3>Email Address- manekishor212@gmail.com</h3>
         <h3>Address-Pune Maharashtra</h3>
         <div>
-          <img src="./img/linkedin.png" alt="" />
-          <img src="./img/github.png" alt="" />
+          <img id="linkedinprofile" src="./img/linkedin.png" alt="" />
+          <img id="githubprofile" src="./img/github.png" alt="" />
         </div>
       </div>
     </div>
