--- a/index.html
+++ b/index.html
@@ -244,7 +244,44 @@
             </div>
           </div>
         </div>
+
+        <!-- 4th -->
+
+
+        <div data-aos="fade-left" data-aos-delay="400">
+          <div class="project_img">
+            <img src="./img/wib101.jpg" alt="" />
+          </div>
+          <div class="project_discription">
+            <h3>Jio-Mart Clone</h3>
+            <h4>
+              This Jio Mart Website Clone project is a comprehensive e-commerce
+              solution that enables users to create an online store with an
+              extensive range of features and functionalities.
+            </h4>
+            <p>
+              Features: home page with differnt project signup and login page.
+            </p>
+            <div class="techstack">
+              <div data-aos="flip-left" data-aos-delay="20">
+                <img src="./img/Html.png" alt="" />
+              </div>
+              <div data-aos="flip-left" data-aos-delay="20">
+                <img src="./img/Css.png" alt="" />
+              </div>
+              <div data-aos="flip-left" data-aos-delay="20">
+                <img src="./img/js-removebg-preview.png" alt="" />
+              </div>
+            </div>
+            <div class="buttons">
+              <button id="jio_git">Github</button>
+              <button id="jio_deployse">Deployed</button>
+            </div>
+          </div>
+        </div>
       </div>
+
+
     </div>
     <div id="contact">
       <div>
