--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <li><a href="#projjjjjjjjjjjjjjjj">Project</a></li>
         <li><a href="#contact">Contact Me</a></li>
         <li>
-          <a
-            href="https://drive.google.com/u/0/uc?id=1vCoAWwfoIguQHzeeyadGaWNapsln_fDv&export=download"
+          <a id="resumeDownload"
             >Resume</a
           >
         </li>
